Avoid empty <tbody> and whitespace in infotable in case the table begins with a header

--- a/css/flask-ui.less
+++ b/css/flask-ui.less
@@ -110,6 +110,10 @@
     color: #868e96;
   }
 
+	tbody:first-child th.info-table-header {
+		padding-top: 8px;
+	}
+
   td.info-table-divider {
     height: 2rem;
   }
